Let section name field in section editing grow vertically with a max length. Truncate the section name on top of dashboard if necessary. Make sure section name can fit in the activity card single line with WRT count.

--- a/scss/partials/_dashboard_layout.scss
+++ b/scss/partials/_dashboard_layout.scss
@@ -240,6 +240,10 @@ div.dashboard-layout {
             font-size: 28px;
             color: $carrot_gray;
             float: left;
+            max-width: 350px;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
 
             @include mobile() {
               @include avenir_H();
