--- a/scss/partials/_entry_edit.scss
+++ b/scss/partials/_entry_edit.scss
@@ -229,9 +229,13 @@ div.entry-edit-modal-container {
           font-size: 14px;
           float: left;
           color: $deep_navy;
+          max-width: 250px;
+          overflow: hidden;
+          text-overflow: ellipsis;
+          white-space: nowrap;
+          padding-right: 20px;
 
           &:after {
-            float: right;
             content: "";
             background-image: cdnUrl("/img/ML/board_settings.svg");
             background-size: 8px 8px;
@@ -239,8 +243,9 @@ div.entry-edit-modal-container {
             background-position: center;
             width: 20px;
             height: 20px;
-            margin-top: -2px;
-            margin-left: 4px;
+            position: absolute;
+            right: 0px;
+            top: -2px;
 
             &:hover {
               opacity: 1;
