--- a/scss/partials/_fullscreen_post.scss
+++ b/scss/partials/_fullscreen_post.scss
@@ -224,9 +224,13 @@ div.fullscreen-post-container {
               position: relative;
               float: left;
               margin-left: 6px;
+              max-width: 250px;
+              overflow: hidden;
+              text-overflow: ellipsis;
+              white-space: nowrap;
+              padding-right: 20px;
 
               &:after {
-                float: right;
                 content: "";
                 background-image: cdnUrl("/img/ML/board_settings.svg");
                 background-size: 8px 8px;
@@ -234,8 +238,9 @@ div.fullscreen-post-container {
                 background-position: center;
                 width: 20px;
                 height: 20px;
-                margin-top: -2px;
-                margin-left: 4px;
+                position: absolute;
+                right: 0px;
+                top: -2px;
 
                 &:hover {
                   opacity: 1;
